tests/macros/tests/ui/err/has-enter-on-poll-and-sync.stderr
error: `enter_on_poll` can not be applied on non-async function
 --> tests/ui/err/has-enter-on-poll-and-sync.rs:5:1
  |
5 | #[trace(enter_on_poll = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
